[package]
name = "tradovate_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
serde_json = "1.0.93"
machine-uid = "0.2.0"
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
chrono = {version = "0.4.23", features = ["serde"]}
tokio = {version = "1.26.0", features = ["macros"]}
dotenv = "0.15.0"
tokio-tungstenite = {version = "0.18.0", features = ["stream","rustls-tls-native-roots"]}
futures = "0.3.26"
rust_decimal = "1.28.1"
rayon = "1.6.1"
itertools = "0.10.5"
log = "0.4.17"
log4rs = "1.2.0"
csv = "1.2.0"
chrono-tz = "0.8.1"
